--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Remote DataLogger HP270</title>
+	<title>HP270's DataLog </title>
 
 	<link type="text/css" rel="stylesheet" href="css/normalize.css" />
 	<link type="text/css" rel="stylesheet" href="css/foundation.min.css" />
@@ -21,8 +21,8 @@
 
 	<style type="text/css">
 		body, html {
-			max-width: 100%;
-			min-height: 100%;
+			max-width: 75%;
+			min-height: 75%;
 			overflow-x: hidden;
 			background: #666 url(img/loading.gif) center center no-repeat;
 		}
@@ -32,7 +32,7 @@
 		}
 
 		#xivelyContent {
-			background: #fff;
+			background: #E0EEEE;
 			box-shadow: inset 0px 0px 100px #f0f0f0;
 		}
 
