--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 	<style type="text/css">
 		body, html {
-			max-width: 75%;
-			min-height: 75%;
+			max-width: 100%;
+			min-height: 50%;
 			overflow-x: hidden;
 			background: #666 url(img/loading.gif) center center no-repeat;
 		}
@@ -32,7 +32,7 @@
 		}
 
 		#xivelyContent {
-			background: #E0EEEE;
+			background: #fff;
 			box-shadow: inset 0px 0px 100px #f0f0f0;
 		}
 
