--- a/index.html
+++ b/index.html
@@ -275,11 +275,12 @@
 							<div class="large-8 columns value"></div>
 						</div>
 					</div>
+					<div class="column">
 					<div class="large-20 columns">
 					<a href="http://www.bosch.pt"><img src="http://www.amaa.de/logos/Bosch.gif/image_preview"></A>
 					
 					</div>
-					
+					</div>
 				</div>
 				<div class="row">
 					<div class="large-12 columns">
