--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
 							<div class="large-8 columns value"></div>
 						</div>
 					</div>
+					<div class="row">
+					</div>
+					<div class="row">
+					</div>
+					<div class="row">
+					</div>
 				<div id="content" style="background-color:#fff;height:400px;width:400px;float:left;">
 					<a href="http://www.bosch.pt"><img src="http://www.amaa.de/logos/Bosch.gif/image_preview"></A>
 				</div>
