--- a/index.html
+++ b/index.html
@@ -276,10 +276,13 @@
 						</div>
 					</div>
 					<div class="row">
+					<div class="large-4 columns"></div>
 					</div>
 					<div class="row">
+					<div class="large-4 columns"></div>
 					</div>
 					<div class="row">
+					<div class="large-4 columns"></div>
 					</div>
 				<div id="content" style="background-color:#fff;height:400px;width:400px;float:left;">
 					<a href="http://www.bosch.pt"><img src="http://www.amaa.de/logos/Bosch.gif/image_preview"></A>
