--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 					</div>
 					
 				<div id="content" style="background-color:#fff;height:400px;width:400px;float:left;">
-					<a href="http://www.bosch.pt"><img src="http://www.amaa.de/logos/Bosch.gif/image_preview"></A>
+					<a href="http://www.bosch.pt"><img src="http://www.avalonappliances.com.au/images/bosch_logo_small.gif"></A>
 				</div>
 				<div class="row">
 					<div class="large-12 columns">
